Fix the layout to not stretch across the whole screen.

--- a/public/scss/component/_header.scss
+++ b/public/scss/component/_header.scss
@@ -818,6 +818,11 @@
   }
 }
 
+.box-navigation {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
 .header-style-3 {
   .wrapper-header {
     min-height: 24px;
